<resources>
    <string name="app_name" translatable="false">NordBoxApp</string>

    <!--Login-->
    <string name="tvLogin">Bienvenido a NordBox, inicie sesión para continuar.</string>
    <string name="etEmailLogin">Introduce tu email</string>
    <string name="etPasswordLogin">Introduce la contraseña</string>
    <string name="btnLogin">Iniciar Sesión</string>
    <string name="imgLogin">Logotipo oficial de NordBox</string>
    <string name="tvLoginError">* Email o contraseña incorrectos</string>

    <!--    Menu overflow-->
    <string name="overReservar">Reservar clases</string>
    <string name="overContacto">Contacto</string>
    <string name="overBenchmarks">Benchmarks</string>
    <string name="overPerfil">Perfil</string>
    <string name="overSalir">Salir</string>

    <!--    Menu Activity-->
    <string name="tvTituloMenu">Menú</string>
    <string name="btnReservar">Reservar clases</string>
    <string name="tvReservar">Reservar clase</string>
    <string name="btnContacto">Contacto</string>
    <string name="tvContacto">Ubicación</string>
    <string name="btnPerfil">Perfil</string>
    <string name="tvPerfil">Perfil</string>
    <string name="btnSalir">Salir</string>
    <string name="tvSalir">Salir</string>
    <string name="btnBenchmarks">Benchmarks</string>
    <string name="tvBenchmarks">Benchmarks</string>

    <!--    Benchmarks-->
    <string name="btnBack_Squat">Back Squat</string>
    <string name="btnBack_Squat_info">Back Squat</string>
    <string name="btnBarbell_lunges">Barbell lunges</string>
    <string name="btnBarbell_lunges_info" translatable="false">bell_lunges_info</string>
    <string name="btnBench_lunges">Bench lunges</string>
    <string name="btnBench_lunges_info" translatable="false">Bench_lunges_info</string>
    <string name="btnBench_Press">Bench Press</string>
    <string name="btnBench_Press_info" translatable="false">Bench_Press_info</string>
    <string name="imageGif">Visualización del ejercicio seleccionado</string>

    <!--    Perfil-->
    <string name="tvPerfilEmail">Correo electrónico (email)</string>
    <string name="etPerfilEmail">Introduce el correo</string>
    <string name="tvPerfilPassword">Contraseña</string>
    <string name="etPerfilPassword">Introduce una constraseña</string>
    <string name="btnPerfilPassword">Cambiar</string>
    <string name="tvPerfilNombre">Nombre</string>
    <string name="etPerfilNombre">Introduce el nombre</string>
    <string name="tvPerfilPriApellido">Primer apellido</string>
    <string name="etPerfilPriApellido">Introduce el primer apellido</string>
    <string name="tvPerfilSegApellido">Segundo apellido</string>
    <string name="etPerfilSegApellido">Introduce el segundo apellido</string>
    <string name="tvPerfilTelefono">Teléfono</string>
    <string name="etPerfilTelefono">Introduce el teléfono</string>
    <string name="tvPerfilTelefonoEmergencia">Teléfono de emergencia</string>
    <string name="etPerfilTelefonoEmergencia">Teléfono de emergencia</string>
    <string name="tvPerfilCodPostal">Código postal</string>
    <string name="etPerfilCodPostal">Introduce el código postal</string>
    <string name="tvPerfilLocalidad">Localidad</string>
    <string name="etPerfilLocalidad">Introduce la localidad</string>
    <string name="tvPerfilProvincia">Provincia</string>
    <string name="etPerfilProvincia">Introduce la provincia</string>
    <string name="btnGuardarPerfil">Guardar datos</string>
    <string name="imagen_del_ejercicio">Imagen del Ejercicio</string>
    <string name="imagen_de_ayuda">Imagen de ayuda</string>
    <string name="nordbox">NordBox</string>
    <string name="errorPerfilEmail">El email no puede estar vacío</string>
    <string name="errorPerfilPassword">No puede estar vacía la contraseña</string>
    <string name="errorPerfilNombre">El nombre es obligatorio</string>
    <string name="errorPerfilPriApellido">El primer apellido es necesario</string>
    <string name="errorPerfilSegApellido">El segundo apellido es necesario</string>
    <string name="errorPerfilTelefono">El teléfono es necesario</string>
    <string name="errorPerfilTelefonoEmergencia">No puede estar vacío</string>
    <string name="errorPerfilTelefonoEmergenciaMismo">No puede ser el mismo que el teléfono</string>
    <string name="errorPerfilCodPostal">El campo es necesario</string>
    <string name="errorPerfilLocalidad">El campo es necesario</string>
    <string name="errorPerfilProvincia">El campo es necesario</string>
    <string name="switchMusica">Música</string>
    <string name="procesoReservar">Opción Reservar en proceso</string>
    <string name="procesoContacto">Opción Contacto en proceso</string>
    <string name="notificacionTitulo">Hora de fortalecerse</string>
    <string name="notificacionCuerpo">Es hora de hacer ejercicios y apuntar los resultados.</string>
    <string name="perfilExitoGuardado">Se ha guardado con éxito</string>
    <string name="tvTituloCreacionUsu">Agregar usuario</string>
    <string name="tvDescripcionCreacionUsu">Para añadir una persona en la aplicación, introduce su correo. Le enviaremos al usuario la información necesaria para entrar en la aplicación.</string>
    <string name="EjercicioPeso">Peso utilizado en Kg</string>
    <string name="EjercicioRonda">Nº de rondas</string>
    <string name="EjercicioFecha">Fecha</string>
    <string name="EjercicioInputPeso">Introduce el peso en Kg</string>
    <string name="EjercicioInputRonda">Introduce el Nº de rondas</string>
    <string name="EjercicioInputFecha">Introduce la fecha</string>
    <string name="fecha_del_ejercicio">Fecha del ejercicio</string>
    <string name="n_de_rondas">Nº de rondas</string>
    <string name="peso_usado_en_kg">Peso usado en Kg</string>
    <string name="tituloAdministracion">Administración</string>
    <string name="men_administrador">Menú Administrador</string>
    <string name="tvCrearEvento">Crear Evento</string>
    <string name="tv_crear_evento">Crear Evento</string>
    <string name="a_adir_usuario">Añadir Usuario</string>
    <string name="tvTituloCreacionEvento">Creacion de Evento</string>
    <string name="n_de_plazas">Nº de Plazas</string>
    <string name="fecha_del_evento">Fecha del evento</string>
    <string name="hora_del_evento">Hora del evento</string>
    <string name="nombre_del_evento">Nombre del evento</string>
    <string name="crear_evento">Crear Evento</string>
    <string name="Rojo">Rojo</string>
    <string name="Azul">Azul</string>
    <string name="Verde">Verde</string>
    <string name="Amarillo">Amarillo</string>
    <string name="errorFechaEvento">Es obligatoria la fecha</string>
    <string name="errorObligatorio">Obligatorio</string>
    <string name="bot_n_de_opci_n_calendario">Botón de opción calendario</string>
    <string name="bot_n_de_selecci_n_de_hora">Botón de selección de hora</string>
    <string name="confirm">Confirmar</string>
    <string name="cancel">Cancelar</string>
    <string name="color">Selecciona el color</string>
    <string name="bot_n_de_selecci_n_de_color">Botón de selección de color</string>
    <string name="tituloColorPicker">Selecciona un color</string>
    <string name="ExitoCreacionEvento">Se ha creado con exito</string>
    <string name="boton_para_abrir_el_calendario">Boton para abrir el calendario</string>
    <string name="dia_anterior">Dia anterior</string>
    <string name="dia_siguiente">Dia siguiente</string>
    <string name="calendario">Calendario</string>
    <string name="entrendor">Entrendor</string>
    <string name="deportista">Deportista</string>
    <string name="borrar">Borrar</string>
    <string name="apuntarse">Apuntarse</string>
    <string name="excluido">Excluido</string>
</resources>