<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".menuActivity">

    <ImageButton
        android:id="@+id/btnReservar"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="84dp"
        android:background="@drawable/boton_redondo"
        android:contentDescription="@string/btnReservar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.19999999"
        app:srcCompat="@android:drawable/ic_menu_my_calendar" />

    <ImageButton
        android:id="@+id/btnContacto"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginEnd="84dp"
        android:background="@drawable/boton_redondo"
        android:contentDescription="@string/btnContacto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btnReservar"
        app:srcCompat="@android:drawable/ic_menu_info_details" />

    <ImageButton
        android:id="@+id/btnBenchmarks"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="84dp"
        android:layout_marginTop="84dp"
        android:background="@drawable/boton_redondo"
        android:contentDescription="@string/btnBenchmarks"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnReservar"
        app:srcCompat="?attr/actionModePasteDrawable" />

    <Button
        android:id="@+id/btnPerfil"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="84dp"
        android:layout_marginEnd="84dp"
        android:background="@drawable/boton_redondo"
        android:text="@string/btnPerfil"
        android:textColor="@color/white"
        app:backgroundTint="@color/transparente"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnContacto" />

    <Button
        android:id="@+id/btnSalir"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="84dp"
        android:background="@drawable/boton_redondo"
        android:text="@string/btnSalir"
        android:textColor="@color/white"
        app:backgroundTint="@color/transparente"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnPerfil" />

</androidx.constraintlayout.widget.ConstraintLayout>