<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".benchmarksActivity">

    <LinearLayout
        android:id="@+id/layoutAnimado"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageGif"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/imageGif" />
    </LinearLayout>

    <Button
        android:id="@+id/btnBack_Squat"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="70dp"
        android:text="@string/btnBack_Squat"
        android:textAlignment="textStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/btnBack_Squat_info"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/boton_redondo"
        android:contentDescription="@string/btnBack_Squat_info"
        app:layout_constraintBottom_toBottomOf="@+id/btnBack_Squat"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnBack_Squat"
        app:layout_constraintTop_toTopOf="@+id/btnBack_Squat"
        app:srcCompat="@android:drawable/ic_menu_info_details" />

    <Button
        android:id="@+id/btnBarbell_lunges"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="70dp"
        android:text="@string/btnBarbell_lunges"
        android:textAlignment="textStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnBack_Squat" />

    <ImageButton
        android:id="@+id/btnBarbell_lunges_info"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/boton_redondo"
        android:contentDescription="@string/btnBarbell_lunges_info"
        app:layout_constraintBottom_toBottomOf="@+id/btnBarbell_lunges"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnBarbell_lunges"
        app:layout_constraintTop_toTopOf="@+id/btnBarbell_lunges"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@android:drawable/ic_menu_info_details" />

    <Button
        android:id="@+id/btnBench_lunges"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="70dp"
        android:text="@string/btnBench_lunges"
        android:textAlignment="textStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnBarbell_lunges" />

    <ImageButton
        android:id="@+id/btnBench_lunges_info"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/boton_redondo"
        android:contentDescription="@string/btnBench_lunges_info"
        app:layout_constraintBottom_toBottomOf="@+id/btnBench_lunges"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnBench_lunges"
        app:layout_constraintTop_toTopOf="@+id/btnBench_lunges"
        app:srcCompat="@android:drawable/ic_menu_info_details" />

    <Button
        android:id="@+id/btnBench_Press"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="70dp"
        android:text="@string/btnBench_Press"
        android:textAlignment="textStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnBench_lunges" />

    <ImageButton
        android:id="@+id/btnBench_Press_info"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/boton_redondo"
        android:contentDescription="@string/btnBench_Press_info"
        app:layout_constraintBottom_toBottomOf="@+id/btnBench_Press"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnBench_Press"
        app:layout_constraintTop_toTopOf="@+id/btnBench_Press"
        app:srcCompat="@android:drawable/ic_menu_info_details" />

</androidx.constraintlayout.widget.ConstraintLayout>