<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EventoActivity">

    <ImageButton
        android:id="@+id/btnDiaAnterior"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/dia_anterior"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvEventoFecha"
        app:srcCompat="@android:drawable/ic_media_rew" />

    <ImageButton
        android:id="@+id/btnDiaSiguiente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/dia_siguiente"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvEventoFecha"
        app:srcCompat="@android:drawable/ic_media_ff" />

    <TextView
        android:id="@+id/tvEventoFecha"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:height="40dp"
        android:background="@color/md_blue_grey_500_50"
        android:paddingTop="10dp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/btnEventoCalendario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/calendario"
        app:layout_constraintEnd_toStartOf="@+id/btnDiaSiguiente"
        app:layout_constraintStart_toEndOf="@+id/btnDiaAnterior"
        app:layout_constraintTop_toBottomOf="@+id/tvEventoFecha"
        app:srcCompat="@android:drawable/ic_menu_month" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvEvento"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnEventoCalendario" />

</androidx.constraintlayout.widget.ConstraintLayout>